--- a/tp4/pokepedia/style.css
+++ b/tp4/pokepedia/style.css
@@ -58,6 +58,14 @@ nav div {
     margin : 0 10px 0 10px;
 }
 
+nav li:hover {
+    background-color: whitesmoke;
+}
+
+nav a {
+    text-decoration: none;
+}
+
 .menuItem ul {
     margin: 1px 0 0 0;
     padding-bottom: 5px;
